--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy docker://zl862520682/ks-console:v3.3.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/ks-console:v3.3.0
+        skopeo copy --platform linux/amd64 docker://kubesphere/fluent-bit:v2.0.5 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/fluent-bit:v2.0.5
  
