--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy --override-arch arm64 docker://kubesphere/fluent-bit:v2.0.6 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/fluent-bit:v2.0.6
+        skopeo copy --override-arch arm64 docker://kubesphere/fluent-bit:v2.0.6-kylin-v10-arm64 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/fluent-bit:v2.0.6
  
