--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://ubuntu:20.04 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/ubuntu:20.04-arm64
+              skopeo copy --override-arch arm64 docker://maven:3.5-jdk-8 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/maven:3.5-jdk-8-arm64
  
