--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://nginx:1.20.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/nginx:1.20.0-arm64
+              skopeo copy --override-arch arm64 docker://minio/minio:RELEASE.2024-11-07T00-52-20Z docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/minio:RELEASE.2024-11-07T00-52-20Z-arm64
  
