--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://minio/minio:RELEASE.2020-07-18T18-48-16Z-arm64 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/minio:RELEASE.2020-07-18T18-48-16Z-arm64
+              skopeo copy --override-arch arm64 docker://dreamacro/clash:v1.18.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/clash:v1.18.0-arm64
  
