--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://ghcr.io/octohelm/harbor/redis-photon:v2.5.2 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/redis-photon:v2.5.2-arm64
+              skopeo copy --override-arch arm64 docker://debian:buster-slim docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/debian:buster-slim-arm64
  
