--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://coredns/coredns:1.8.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/coredns:1.8.0-arm64
+              skopeo copy --override-arch arm64 docker://kubesphere/k8s-dns-node-cache:1.22.20 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/k8s-dns-node-cache:1.22.20-arm64
  
