--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://calico/kube-controllers:v3.27.4-52-g62ef945dc95c docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kube-controllers:v3.27.4-arm64
+              skopeo copy --override-arch arm64 docker://bitnami/kube-rbac-proxy:0.14.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kube-rbac-proxy:0.14.0-arm64
  
