--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://dyrnq/defaultbackend-arm64:1.5 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/defaultbackend-amd64:1.5-arm64
+              skopeo copy --override-arch arm64 docker://jettech/kube-webhook-certgen:v1.2.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kube-webhook-certgen:v1.2.0-arm64
  
