--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://dyrnq/kube-webhook-certgen:v1.2.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kube-webhook-certgen:v1.2.0-arm64
+              skopeo copy --override-arch arm64 docker://bitnami/metrics-server:0.6.2 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/metrics-server:0.6.2-arm64
  
