--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://busybox:1.30.1 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/busybox:1.30.1-arm64
+              skopeo copy --override-arch arm64 docker://bitnami/minio:2024.11.7-debian-12-r2 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/minio:2024.11.7-debian-12-r2-arm64
  
