--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://bitnami/mysql:8.0.40 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/mysql:8.0.40-arm64
+              skopeo copy --override-arch arm64 docker://bitnami/zookeeper:3.7.1-debian-11-r107 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/zookeeper:3.7.1-debian-11-r107-arm64
  
