--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,5 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://bitnami/zookeeper:3.7.1-debian-11-r107 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/zookeeper:3.7.1-debian-11-r107-arm64
- 
+              skopeo copy --override-arch amd64 docker://maven:3.8-jdk-8 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/maven:3.8-jdk-8
