--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://hxsoong/kylin:v10-sp3 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kylin:v10-sp3-arm64
+              skopeo copy --override-arch amd64 docker://hxsoong/kylin:v10-sp3 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kylin:v10-sp3
