--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch amd64 docker://prom/prometheus:v2.25.0 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/prometheus:v2.25.0
+              skopeo copy --override-arch amd64 docker://grafana/grafana:7.3.7 docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/grafana:7.3.7
