--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch arm64 docker://nacos/nacos-server:v2.5.0  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/nacos-server:v2.5.0-arm64
+              skopeo copy --override-arch amd64 docker://timescale/timescaledb:2.19.3-pg15  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/timescaledb:2.19.3-pg15
