--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch amd64 docker://bitnami/redis:8.0  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/redis:8.0
+              skopeo copy --override-arch amd64 docker://minio/minio:RELEASE.2025-04-22T22-12-26Z  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/minio:RELEASE.2025-04-22T22-12-26Z
