--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch amd64 docker://golang:tip-alpine3.21  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/golang:tip-alpine3.21
+              skopeo copy --override-arch amd64 docker://alpine:3.21.3  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/alpine:3.21.3
