--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch amd64 docker://nacos/nacos-server:v2.2.2  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/nacos-server:v2.2.2
+              skopeo copy --override-arch amd64 docker://python:3.11-slim  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/python:3.11-slim
