--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-              skopeo copy --override-arch amd64 docker://redis  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/redis:latest
+              skopeo copy --override-arch amd64 docker://nginx  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/nginx:latest
