--- a/.github/workflows/sync-images-dockerHub-example.yml
+++ b/.github/workflows/sync-images-dockerHub-example.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy --override-arch amd64 docker://quay.io/calico/kube-controllers:v3.31.2  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/kube-controllers:v3.31.2
+        skopeo copy --override-arch amd64 docker://registry.k8s.io/ingress-nginx/controller:v1.14.1  docker://registry.cn-zhangjiakou.aliyuncs.com/cyct-ai/ingress-nginx-controller:v1.14.1
